--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,30 @@
     </style>
 
     <style name="Theme.Calculadora_clase" parent="Base.Theme.Calculadora_clase" />
+
+    <style name="CalculatorButton">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:inset">0dp</item>
+        <item name="android:backgroundTint">@color/cardview_dark_background</item>
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+    </style>
+
+    <style name="AllClearButtom" parent="CalculatorButton">
+        <item name="android:textColor">@color/all_clear_text</item>
+    </style>
+
+    <style name="ActionButton" parent="CalculatorButton">
+        <item name="android:textColor">@color/action_text</item>
+    </style>
+
+    <style name="EqualsButtom" parent="CalculatorButton">
+        <item name="android:backgroundTint">@color/equal_button_background</item>
+        <item name="android:textColor">@color/equal_button_text</item>
+    </style>
+
 </resources>
