--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.Calculadora_clase" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="android:statusBarColor">@color/status_bar</item>
     </style>
 
     <style name="CalculatorButton">
@@ -10,7 +11,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:inset">0dp</item>
-        <item name="android:backgroundTint">@color/cardview_dark_background</item>
+        <item name="android:backgroundTint">@color/buttons_background</item>
         <item name="android:textColor">@color/primary_text</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">24sp</item>
