--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="buttons_background">#F5F6F8</color>
     <color name="divider">#E2E9EE</color>
     <color name="status_bar">#C3C7CB</color>
+    <color name="error_text">#E57373</color>
 </resources>
